--- a/buy.html
+++ b/buy.html
@@ -26,54 +26,56 @@
         <div class="pricing-grid">
             <div class="pricing-card" data-aos="fade-up" data-aos-delay="100">
                 <h3>Trial Version</h3>
-                <div class="price">$5<span>/3 days</span></div>
+                <div class="price">$3<span>/1 days</span></div>
                 <ul>
                     <li>1 WhatsApp Number</li>
-                    <li>Unlimited Messages</li>
-                    <li>CSV Import Support</li>
-                    <li>Basic Support</li>
+                    <li>Limited to 1 message</li>
+                    <li>Limited to 1 Numbers</li>
+                    <li>Basic Support until decided</li>
                     <li>Perfect to Test the App</li>
                 </ul>
                 <a href="#contact" class="buy-button">Get Trial</a>
             </div>
 
-            <div class="pricing-card" data-aos="fade-up" data-aos-delay="200">
-                <h3>Standard License</h3>
+            <div class="pricing-card featured" data-aos="fade-up" data-aos-delay="200">
+                <div class="featured-tag">Most Popular</div>
+                <h3>Small Business</h3>
                 <div class="price">$29<span>/month</span></div>
                 <ul>
                     <li>1 WhatsApp Number</li>
                     <li>Unlimited Messages</li>
-                    <li>CSV & Excel Import</li>
-                    <li>Priority Support</li>
+                    <li>Unlimited Numbers</li>
+                    <li>Max 72 Support</li>
                     <li>Full Feature Access</li>
                 </ul>
                 <a href="#contact" class="buy-button">Purchase Now</a>
             </div>
 
-            <div class="pricing-card featured" data-aos="fade-up" data-aos-delay="300">
-                <div class="featured-tag">Most Popular</div>
-                <h3>Business License</h3>
-                <div class="price">$250<span>/month</span></div>
+            <div class="pricing-card" data-aos="fade-up" data-aos-delay="300">
+                <h3>Enterprise</h3>
+                <div class="price">$70<span>/month</span></div>
                 <ul>
+                    <li>Same as Standard</li>
                     <li>3 WhatsApp Numbers</li>
-                    <li>Unlimited Messages</li>
-                    <li>Advanced Import Options</li>
                     <li>24/7 Priority Support</li>
-                    <li>API Integration Available</li>
+                    <li>Feature Request Priortized</li>
                 </ul>
                 <a href="#contact" class="buy-button">Purchase Now</a>
             </div>
         </div>
+    </section>
 
-        <div id="contact" class="contact-info" data-aos="fade-up">
-            <h3>Contact Us to Purchase</h3>
-            <p><i class="fab fa-whatsapp"></i> WhatsApp: +1234567890</p>
-            <p><i class="far fa-envelope"></i> Email: contact@example.com</p>
-            <p><i class="fab fa-telegram"></i> Telegram: @contactly_support</p>
+    <section id="contact" class="contact-section">
+        <div class="contact-info" data-aos="fade-up">
+            <h3>Contact to Purchase</h3>
+            <p><a href="https://wa.me/201114346024" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></p>
+            <p><a href="mailto:medo0alaa80@gmail.com"><i class="far fa-envelope"></i> Gmail</a></p>
+            <p><a href="https://t.me/Mo_Hashad30" target="_blank"><i class="fab fa-telegram"></i> Telegram</a></p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://github.com/mo-hashad30" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://wa.me/201114346024" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://t.me/Mo_Hashad30" target="_blank"><i class="fab fa-telegram"></i></a>
+                <a href="mailto:medo0alaa80@gmail.com"><i class="far fa-envelope"></i></a>
             </div>
         </div>
     </section>
@@ -91,11 +93,12 @@
                 <a href="#pricing">Pricing</a>
             </div>
             <div class="footer-social">
-                <h4>Connect With Us</h4>
+                <h4>Get Connected</h4>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-telegram"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://github.com/mo-hashad30" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://wa.me/201114346024" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://t.me/Mo_Hashad30" target="_blank"><i class="fab fa-telegram"></i></a>
+                    <a href="mailto:medo0alaa80@gmail.com"><i class="far fa-envelope"></i></a>
                 </div>
             </div>
         </div>
