--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactly - WhatsApp Mass Messaging Tool</title>
+    <title>Contactly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -17,23 +17,25 @@
             <div class="nav-links">
                 <a href="#features">Features</a>
                 <a href="#about">About</a>
-                <a href="buy.html">Buy Now</a>
+                <a href="buy.html">Purchase</a>
                 <a href="#download">Download</a>
             </div>
         </div>
     </nav>
 
     <header class="hero">
-        <div class="hero-content" data-aos="fade-up">
-            <h1>Streamline Your WhatsApp Business Communication</h1>
-            <p>Send personalized messages to multiple contacts efficiently and securely</p>
-            <div class="hero-buttons">
-                <a href="buy.html" class="cta-button">Buy Now</a>
-                <a href="#download" class="cta-button cta-secondary">Try Demo</a>
+        <div class="hero-wrapper">
+            <div class="hero-content" data-aos="fade-up">
+                <h1>Streamline Your WhatsApp Business Communication!</h1>
+                <p>Send personalized messages to multiple contacts efficiently and securely</p>
+                <div class="hero-buttons">
+                    <a href="buy.html" class="cta-button">Purchase</a>
+                    <a href="#download" class="cta-button cta-secondary">Try Demo?</a>
+                </div>
             </div>
-        </div>
-        <div class="hero-image" data-aos="fade-left">
-            <img src="assets/app-screenshot-1.png" alt="Contactly WhatsApp Sender Interface"  width="300" height="438">
+            <div class="hero-image" data-aos="fade-left">
+                <img src="assets/app-screenshot-1.png" alt="Contactly WhatsApp Sender Interface">
+            </div>
         </div>
     </header>
 
@@ -43,22 +45,22 @@
             <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
                 <i class="fas fa-users"></i>
                 <h3>Mass Messaging</h3>
-                <p>Send messages to multiple contacts while maintaining a personal touch</p>
+                <p>Send messages to multiple contacts with ease.</p>
             </div>
             <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
                 <i class="fas fa-shield-alt"></i>
                 <h3>Secure & Private</h3>
-                <p>Advanced encryption and security measures to protect your data</p>
+                <p>We don't collect any data from your experience.</p>
             </div>
             <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
                 <i class="fas fa-file-import"></i>
                 <h3>Easy Import</h3>
-                <p>Import contacts from CSV files with just a few clicks</p>
+                <p>Import numbers from txt files, media files and more with just a few clicks.</p>
             </div>
             <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                 <i class="fas fa-chart-line"></i>
                 <h3>Analytics</h3>
-                <p>Track message delivery and engagement statistics</p>
+                <p>Track message delivery statistics.</p>
             </div>
         </div>
     </section>
@@ -79,13 +81,13 @@
         <div class="download-content" data-aos="zoom-in">
             <h2>Get Started with Contactly</h2>
             <p>Available for Windows</p>
-            <a href="#" class="download-button">
+            <a href="#" class="download-button" hidden>
                 <i class="fab fa-windows"></i>
-                Download for Windows
+                Download not available yet.
             </a>
             <div class="version-info">
                 <span>Latest Version: 5.21.0</span>
-                <span>Size: 85MB</span>
+                <span>Size: 147MB</span>
             </div>
         </div>
     </section>
@@ -94,7 +96,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <h3>Contactly</h3>
-                <p>WhatsApp Mass Messaging Tool</p>
+                <p>WhatsApp Mass Messaging Tool with Advanced Features.</p>
             </div>
             <div class="footer-links">
                 <h4>Quick Links</h4>
@@ -106,9 +108,10 @@
             <div class="footer-social">
                 <h4>Connect With Us</h4>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/mo-hashad30" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://wa.me/201114346024" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://t.me/Mo_Hashad30" target="_blank"><i class="fab fa-telegram"></i></a>
+                    <a href="mailto:medo0alaa80@gmail.com"><i class="far fa-envelope"></i></a>
                 </div>
             </div>
         </div>
